<resources>
    <string name="app_name">Restaurant Booker</string>
    <string name="welcome_message">Welcome to Restaurant Booker!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create an account</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="restaurant_rating">Rating</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="update_restaurant">Update Restaurant</string>
    <string name="delete_restaurant">Delete Restaurant</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="welcome">Welcome</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email address</string>
    <string name="already_registered">Already registered</string>
    <string name="select_booking_prompt">Select booking</string>
    <string name="signup_success_message">Welcome, %1$s! You have successfully signed up.</string>
    <string name="signup_error_message">error signing up</string>
    <string name="email_already_exists_error">Email already exists. Please use a different email address.</string>

</resources>